Correções das classes de teste